library/general/disallowinteractive/samples/no-interactive-containers/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-interactive-tty-allowed
  labels:
    app: nginx-interactive-tty
spec:
  containers:
  - name: nginx
    image: nginx
    stdin: false
    tty: false
