library/general/disallowinteractive/samples/no-interactive-containers/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowInteractiveTTY
metadata:
  name: no-interactive-tty-containers
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
